--- a/pages/index.html
+++ b/pages/index.html
@@ -6,11 +6,160 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
   </head>
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+  />
   <body>
     <%- include('./layout/header'); -%>
 
-    <h1 class="index-title">我是首頁</h1>
-    <img src="../assets/images/dog.jpg" style="width: 300px;" alt="cat">
+    <div class="banner mb-64 mb-md-40 position-relative">
+      <div class="mb-32">
+        <p class="fs-64">URBNSTEP</p>
+        <p class="fs-28 mb-48">Your Step, Your Statement</p>
+        <button>立即選購</button>
+      </div>
+    </div>
+
+    <section class="mb-32 mb-md-24 pl-md-12 pr-md-12 mb-64 mb-md-40">
+      <div class="container">
+        <p class="fs-48 mb-12 mb-md-8 text-center">New Arrival</p>
+        <p class="fs-32 text-center mb-32 mb-md-24">新品上市</p>
+        <div class="d-flex flex-wrap">
+          <div class="new-col w-50 mb-40 mb-md-24">
+            <div class="new-item-card pr-12 pr-md-6">
+              <img
+                class="mb-md-4 mb-12 mb-md-4"
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/new-1.png"
+                alt=""
+              />
+              <p class="mb-4 mb-md-0 fs-20 fs-md-16">Monoverse</p>
+              <p>NT$3,600</p>
+            </div>
+          </div>
+          <div class="new-col w-50 mb-40 mb-md-24">
+            <div class="new-item-card pl-12 pl-md-6">
+              <img
+                class="mb-12 mb-md-4"
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/new-2.png"
+                alt=""
+              />
+              <p class="fw-700 fs-20 fs-md-16">PLATFORM 404</p>
+              <p>NT$2,600</p>
+            </div>
+          </div>
+          <div class="new-col w-50 mb-40 mb-md-24">
+            <div class="new-item-card pr-12 pr-md-6">
+              <img
+                class="mb-12 mb-md-4"
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/new-3.png"
+                alt=""
+              />
+              <p class="fw-700 fs-20 fs-md-16">URBN Force</p>
+              <p>NT$3,200</p>
+            </div>
+          </div>
+          <div class="new-col w-50 mb-40 mb-md-24">
+            <div class="new-item-card pl-12 pl-md-6">
+              <img
+                class="mb-12 mb-md-4"
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/new-4.png"
+                alt=""
+              />
+              <p class="fw-700 fs-20 fs-md-16">Mode90</p>
+              <p>NT$4,000</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="pl-md-12 pr-md-12 mb-64 mb-md-40">
+      <div class="container">
+        <h2 class="fs-32 fs-md-24 mb-16 mb-md-21 text-md-center">熱銷補貨</h2>
+
+        <div class="d-flex overflow-x-auto flex-nowrap" style="margin: -12px">
+          <div class="w-25 w-md-300 pr-12">
+            <div class="hot-item-card position-relative">
+              <p>人氣 No.1</p>
+              <img src="../assets/images/product-3.png" alt="Melty Kiss" />
+            </div>
+          </div>
+          <div class="w-25 w-md-300 pr-12">
+            <div class="hot-item-card position-relative">
+              <p>人氣 No.1</p>
+              <img src="../assets/images/product.png" alt="PLATFORM 404" />
+            </div>
+          </div>
+          <div class="w-25 w-md-300 pr-12">
+            <div class="hot-item-card position-relative">
+              <p>人氣 No.1</p>
+              <img src="../assets/images/product-6.png" alt="R:UNER" />
+            </div>
+          </div>
+          <div class="w-25 w-md-300 pr-12">
+            <div class="hot-item-card position-relative">
+              <p>人氣 No.1</p>
+              <img src="../assets/images/product-4.png" alt="BOOMBLOK" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="mb-120 mb-md-64">
+      <div class="cool-banner">
+        <h3>URBNSTEP <span>x</span> Kevin Chen</h3>
+        <p>跨界聯名，限量發售</p>
+        <p>新銳漫畫家 Kevin Chen 親自操刀設計，街頭能量全面引爆！</p>
+        <button>立即搶購</button>
+      </div>
+    </section>
+
+    <section class="pl-md-12 pr-md-12 mb-64 mb-md-40">
+      <div class="container">
+        <h2 class="fs-32 fs-md-24 mb-16 mb-md-21 text-md-center">依系列選購</h2>
+        <div class="d-flex flex-wrap">
+          <div class="w-25 w-md-50 mb-md-12 pr-12">
+            <div class="chose-shoe">
+              <img src="../assets/images/product-6.png" alt="BOOMBLOK" />
+              <div class="overlay">
+                <h3>URBN RUNNER</h3>
+                <p>慢跑系列</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="w-25 w-md-50 mb-md-12 pr-12 pr-md-0">
+            <div class="chose-shoe">
+              <img src="../assets/images/product.png" alt="BOOMBLOK" />
+              <div class="overlay">
+                <h3>URBN RUNNER</h3>
+                <p>滑板系列</p>
+              </div>
+            </div>
+          </div>
+          <div class="w-25 w-md-50 mb-md-12 pr-12">
+            <div class="chose-shoe">
+              <img src="../assets/images/product-4.png" alt="BOOMBLOK" />
+              <div class="overlay">
+                <h3>URBN RUNNER</h3>
+                <p>厚底系列</p>
+              </div>
+            </div>
+          </div>
+          <div class="w-25 w-md-50 mb-md-12">
+            <div class="chose-shoe">
+              <img src="../assets/images/product-10.png" alt="BOOMBLOK" />
+              <div class="overlay">
+                <h3>URBN RUNNER</h3>
+                <p>聯名系列</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <%- include('./layout/footer'); -%>
 
