--- a/pages/index.html
+++ b/pages/index.html
@@ -13,6 +13,15 @@
   <body>
     <%- include('./layout/header'); -%>
 
+    <div class="d-flex justify-content-center text-center">
+      <div class="pt-12 pb-12 w-50 bg-primary-200 d-none d-md-block">
+        商品列表
+      </div>
+      <div class="pt-12 pb-12 w-50 bg-primary-100 d-none d-md-block">
+        品牌故事
+      </div>
+    </div>
+
     <div class="banner mb-64 mb-md-40 position-relative">
       <div class="mb-32">
         <p class="fs-64">URBNSTEP</p>
@@ -158,6 +167,212 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="mb-120 d-md-none">
+      <div class="container">
+        <h2 class="fs-32 fs-md-24 mb-16 mb-md-21 text-md-center">穿搭靈感</h2>
+        <div class="d-flex">
+          <div class="d-flex flex-direction-column w-33 pr-4">
+            <div class="d-flex mb-4">
+              <div class="w-50 pr-4">
+                <img
+                  class="w-100"
+                  src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-1.png"
+                  alt="穿搭靈感"
+                />
+              </div>
+              <div class="w-50 pl-4">
+                <img
+                  class="w-100"
+                  src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-2.png"
+                  alt="穿搭靈感"
+                />
+              </div>
+            </div>
+            <div class="mt-4 pb-8">
+              <img
+                class="w-100"
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-3.png"
+                alt="穿搭靈感"
+              />
+            </div>
+          </div>
+
+          <div class="d-flex flex-wrap w-33 pl-4 pr-4">
+            <div class="w-50 pr-4">
+              <img
+                class="w-100"
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-4.png"
+                alt="穿搭靈感"
+              />
+            </div>
+            <div class="w-50 pl-4">
+              <img
+                class="w-100"
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-5.png"
+                alt="穿搭靈感"
+              />
+            </div>
+            <div class="w-50 pr-4">
+              <img
+                class="w-100"
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-6.png"
+                alt="穿搭靈感"
+              />
+            </div>
+            <div class="w-50 pl-4">
+              <img
+                class="w-100"
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-7.png"
+                alt="穿搭靈感"
+              />
+            </div>
+            <div class="w-50 pr-4">
+              <img
+                class="w-100"
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-8.png"
+                alt="穿搭靈感"
+              />
+            </div>
+            <div class="w-50 pl-4">
+              <img
+                class="w-100"
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-9.png"
+                alt="穿搭靈感"
+              />
+            </div>
+          </div>
+          <div class="d-flex flex-direction-column w-33 pl-4">
+            <div class="pb-4">
+              <img
+                class="w-100"
+                src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-10.png"
+                alt="穿搭靈感"
+              />
+            </div>
+            <div class="d-flex pt-4">
+              <div class="w-50 pr-4">
+                <img
+                  class="w-100"
+                  src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-11.png"
+                  alt="穿搭靈感"
+                />
+              </div>
+              <div class="w-50 pl-4">
+                <img
+                  class="w-100"
+                  src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-12.png"
+                  alt="穿搭靈感"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="d-md-block d-none pl-md-12 pr-md-12 mb-64">
+      <h2 class="fs-32 fs-md-24 mb-16 mb-md-21">穿搭靈感</h2>
+
+      <div class="d-flex flex-nowrap overflow-x-auto">
+        <div class="w-md-300 pr-8">
+          <img
+            class="w-100"
+            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-1.png"
+            alt="穿搭靈感"
+          />
+        </div>
+        <div class="w-md-300 pr-8">
+          <img
+            class="w-100"
+            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-2.png"
+            alt="穿搭靈感"
+          />
+        </div>
+        <div class="w-md-300 pr-8">
+          <img
+            class="w-100"
+            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-3.png"
+            alt="穿搭靈感"
+          />
+        </div>
+        <div class="w-md-300 pr-8">
+          <img
+            class="w-100"
+            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-4.png"
+            alt="穿搭靈感"
+          />
+        </div>
+        <div class="w-md-300 pr-8">
+          <img
+            class="w-100"
+            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-5.png"
+            alt="穿搭靈感"
+          />
+        </div>
+        <div class="w-md-300 pr-8">
+          <img
+            class="w-100"
+            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-6.png"
+            alt="穿搭靈感"
+          />
+        </div>
+        <div class="w-md-300 pr-8">
+          <img
+            class="w-100"
+            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-7.png"
+            alt="穿搭靈感"
+          />
+        </div>
+        <div class="w-md-300 pr-8">
+          <img
+            class="w-100"
+            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-8.png"
+            alt="穿搭靈感"
+          />
+        </div>
+        <div class="w-md-300 pr-8">
+          <img
+            class="w-100"
+            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-9.png"
+            alt="穿搭靈感"
+          />
+        </div>
+        <div class="w-md-300 pr-8">
+          <img
+            class="w-100"
+            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-10.png"
+            alt="穿搭靈感"
+          />
+        </div>
+        <div class="w-md-300 pr-8">
+          <img
+            class="w-100"
+            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-11.png"
+            alt="穿搭靈感"
+          />
+        </div>
+        <div class="w-md-300 pr-8">
+          <img
+            class="w-100"
+            src="https://raw.githubusercontent.com/hexschool/2022-web-layout-training/refs/heads/main/2025-week3-4/inspiration-12.png"
+            alt="穿搭靈感"
+          />
+        </div>
+      </div>
+    </section>
+
+    <section class="mt-48 bg-primary-200 pt-33 pb-33 mb-64">
+      <div class="container">
+        <p class="text-center">
+          加入會員取得 9 折優惠<span
+            class="ml-24 pl-24 pr-24 pt-12 pb-12"
+            style="color: #ffffff; background: #000; border-radius: 4px"
+            >馬上註冊</span
+          >
+        </p>
       </div>
     </section>
 
