Add product detail page and update product list styles
Added a new product detail page (product-detail.html) with corresponding SCSS for layout and responsiveness. Updated product list page to improve responsive layout, added new product cards, and adjusted spacing and utility classes. Removed the about page and made minor SCSS utility and style corrections for better consistency across pages.

--- a/pages/product-list.html
+++ b/pages/product-list.html
@@ -13,7 +13,7 @@
   <body>
     <%- include('./layout/header'); -%>
 
-    <nav class="mb-24 mt-32">
+    <nav class="mb-24 mt-32 pl-md-12 pr-md-12">
       <div class="container">
         <p>
           <span class="neutral-600">首頁</span
@@ -24,7 +24,7 @@
       </div>
     </nav>
 
-    <section class="mb-24">
+    <section class="mb-24 pl-md-12 pr-md-12">
       <div class="container">
         <div class="content-title">
           <h3 class="fs-28 fw-700">女鞋</h3>
@@ -32,10 +32,10 @@
       </div>
     </section>
 
-    <section class="mb-32">
+    <section class="mb-32 pl-md-12 pr-md-12">
       <div class="container">
         <div class="d-flex">
-          <div class="mr-24" style="min-width: 200px">
+          <div class="mr-12 d-md-none" style="min-width: 200px">
             <ul class="list-none d-flex flex-direction-column">
               <li class="list-type">
                 <span class="primary-400">所有商品</span>
@@ -50,7 +50,7 @@
           <div>
             <div class="d-flex flex-wrap">
               <div class="card-row">
-                <div class="card">
+                <div class="card pr-md-6">
                   <img
                     class="mb-12"
                     src="../assets/images/product.png"
@@ -61,7 +61,7 @@
                 </div>
               </div>
               <div class="card-row">
-                <div class="card">
+                <div class="card pl-md-6">
                   <img
                     class="mb-12"
                     src="../assets/images/product-1.png"
@@ -72,7 +72,7 @@
                 </div>
               </div>
               <div class="card-row">
-                <div class="card">
+                <div class="card pr-md-6">
                   <img
                     class="mb-12"
                     src="../assets/images/product-2.png"
@@ -83,7 +83,7 @@
                 </div>
               </div>
               <div class="card-row">
-                <div class="card">
+                <div class="card pl-md-6">
                   <img
                     class="mb-12"
                     src="../assets/images/product-3.png"
@@ -94,7 +94,7 @@
                 </div>
               </div>
               <div class="card-row">
-                <div class="card">
+                <div class="card pr-md-6">
                   <img
                     class="mb-12"
                     src="../assets/images/product-4.png"
@@ -105,7 +105,7 @@
                 </div>
               </div>
               <div class="card-row">
-                <div class="card">
+                <div class="card pl-md-6">
                   <img
                     class="mb-12"
                     src="../assets/images/product-5.png"
@@ -116,7 +116,7 @@
                 </div>
               </div>
               <div class="card-row">
-                <div class="card">
+                <div class="card pr-md-6">
                   <img
                     class="mb-12"
                     src="../assets/images/product-6.png"
@@ -127,7 +127,7 @@
                 </div>
               </div>
               <div class="card-row">
-                <div class="card">
+                <div class="card pl-md-6">
                   <img
                     class="mb-12"
                     src="../assets/images/product-7.png"
@@ -138,10 +138,43 @@
                 </div>
               </div>
               <div class="card-row">
-                <div class="card">
+                <div class="card pr-md-6">
                   <img
                     class="mb-12"
                     src="../assets/images/product-8.png"
+                    alt="鞋子8"
+                  />
+                  <p>PLATFORM 404</p>
+                  <p>NT$2,600</p>
+                </div>
+              </div>
+              <div class="card-row">
+                <div class="card pl-md-6">
+                  <img
+                    class="mb-12"
+                    src="../assets/images/product-9.png"
+                    alt="鞋子8"
+                  />
+                  <p>PLATFORM 404</p>
+                  <p>NT$2,600</p>
+                </div>
+              </div>
+              <div class="card-row d-md-none">
+                <div class="card">
+                  <img
+                    class="mb-12"
+                    src="../assets/images/product-10.png"
+                    alt="鞋子8"
+                  />
+                  <p>PLATFORM 404</p>
+                  <p>NT$2,600</p>
+                </div>
+              </div>
+              <div class="card-row d-md-none">
+                <div class="card">
+                  <img
+                    class="mb-12"
+                    src="../assets/images/product-11.png"
                     alt="鞋子8"
                   />
                   <p>PLATFORM 404</p>
