Add brand story page and styles
Created brand-story.html with content and structure for the brand story section. Added corresponding SCSS styles in _brand-story.scss and imported them in all.scss. Minor adjustment to section classes in index.html for consistency.

--- a/pages/index.html
+++ b/pages/index.html
@@ -364,7 +364,7 @@
       </div>
     </section>
 
-    <section class="mt-48 bg-primary-200 pt-33 pb-33 mb-64">
+    <section class="mt-48 bg-primary-200 pt-33 pt-md-0 pb-33 mb-64">
       <div class="container">
         <p class="text-center">
           加入會員取得 9 折優惠<span
