--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    <script type="module" crossorigin src="/hexschool-web-4/assets/main-CkewO-kP.js"></script>
-    <link rel="stylesheet" crossorigin href="/hexschool-web-4/assets/main-tAuJMyF6.css">
+    <script type="module" crossorigin src="/hexschool-web-4/assets/main-CuhCwIE-.js"></script>
+    <link rel="stylesheet" crossorigin href="/hexschool-web-4/assets/main-B4DEnR1z.css">
   </head>
   <link
     rel="stylesheet"
@@ -381,7 +381,7 @@
       </div>
     </section>
 
-    <section class="mt-48 bg-primary-200 pt-33 pb-33 mb-64">
+    <section class="mt-48 bg-primary-200 pt-33 pt-md-0 pb-33 mb-64">
       <div class="container">
         <p class="text-center">
           加入會員取得 9 折優惠<span
