--- a/pages/product-list.html
+++ b/pages/product-list.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -48,8 +54,8 @@
           </div>
 
           <div>
-            <div class="d-flex flex-wrap">
-              <div class="card-row">
+            <ul class="d-flex flex-wrap list-unstyled">
+              <li class="card-row">
                 <div class="card pr-md-6">
                   <img
                     class="mb-12"
@@ -59,8 +65,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pl-md-6">
                   <img
                     class="mb-12"
@@ -70,8 +76,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pr-md-6">
                   <img
                     class="mb-12"
@@ -81,8 +87,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pl-md-6">
                   <img
                     class="mb-12"
@@ -92,8 +98,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pr-md-6">
                   <img
                     class="mb-12"
@@ -103,8 +109,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pl-md-6">
                   <img
                     class="mb-12"
@@ -114,8 +120,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pr-md-6">
                   <img
                     class="mb-12"
@@ -125,8 +131,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pl-md-6">
                   <img
                     class="mb-12"
@@ -136,8 +142,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pr-md-6">
                   <img
                     class="mb-12"
@@ -147,8 +153,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pl-md-6">
                   <img
                     class="mb-12"
@@ -158,8 +164,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row d-md-none">
+              </li>
+              <li class="card-row d-md-none">
                 <div class="card">
                   <img
                     class="mb-12"
@@ -169,8 +175,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row d-md-none">
+              </li>
+              <li class="card-row d-md-none">
                 <div class="card">
                   <img
                     class="mb-12"
@@ -180,19 +186,20 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-            </div>
+              </li>
+            </ul>
+
             <div class="d-flex justify-content-ct">
               <img
                 class="page"
                 src="../assets/images/chevron-left.svg"
                 alt="左"
               />
-              <p class="page bg-primary-300">1</p>
+              <p class="page">1</p>
               <p class="page">2</p>
               <p class="page">3</p>
               <p class="page">...</p>
-              <p class="page">10</p>
+              <p class="page page-select">10</p>
               <img
                 class="page"
                 src="../assets/images/chevron-right.svg"
