--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    <script type="module" crossorigin src="/hexschool-web-4/assets/main-Dd6xFy0u.js"></script>
-    <link rel="stylesheet" crossorigin href="/hexschool-web-4/assets/main-CL8EEvGh.css">
+    <script type="module" crossorigin src="/hexschool-web-4/assets/main-DqablsSc.js"></script>
+    <link rel="stylesheet" crossorigin href="/hexschool-web-4/assets/main-D0w_5AF5.css">
   </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap"
+    rel="stylesheet"
+  />
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
   />
+
   <body>
     <nav class="nav">
   <div class="container pl-md-12 pr-md-12">
@@ -43,7 +50,7 @@
       <div class="mb-32">
         <p class="fs-64">URBNSTEP</p>
         <p class="fs-28 mb-48">Your Step, Your Statement</p>
-        <button>立即選購</button>
+        <button class="btn-hover">立即選購</button>
       </div>
     </div>
 
@@ -100,30 +107,30 @@
       </div>
     </section>
 
-    <section class="pl-md-12 pr-md-12 mb-64 mb-md-40">
+    <section class="mb-64 mb-md-40 pl-md-12 pr-md-12">
       <div class="container">
         <h2 class="fs-32 fs-md-24 mb-16 mb-md-21 text-md-center">熱銷補貨</h2>
 
-        <div class="d-flex overflow-x-auto flex-nowrap" style="margin: -12px">
-          <div class="w-25 w-md-300 pr-12">
+        <div class="d-flex overflow-x-auto flex-nowrap">
+          <div class="w-25 w-md-300 mr-12">
             <div class="hot-item-card position-relative">
               <p>人氣 No.1</p>
               <img src="/hexschool-web-4/assets/product-3-AxvEbKOW.png" alt="Melty Kiss" />
             </div>
           </div>
-          <div class="w-25 w-md-300 pr-12">
+          <div class="w-25 w-md-300 mr-12">
             <div class="hot-item-card position-relative">
               <p>人氣 No.1</p>
               <img src="/hexschool-web-4/assets/product-ByIiOSCa.png" alt="PLATFORM 404" />
             </div>
           </div>
-          <div class="w-25 w-md-300 pr-12">
+          <div class="w-25 w-md-300 mr-12">
             <div class="hot-item-card position-relative">
               <p>人氣 No.1</p>
               <img src="/hexschool-web-4/assets/product-6-D5PaxBWx.png" alt="R:UNER" />
             </div>
           </div>
-          <div class="w-25 w-md-300 pr-12">
+          <div class="w-25 w-md-300">
             <div class="hot-item-card position-relative">
               <p>人氣 No.1</p>
               <img src="/hexschool-web-4/assets/product-4-CqyUCYzf.png" alt="BOOMBLOK" />
@@ -415,6 +422,6 @@
     </div>
   </div>
 </footer>
-
+
   </body>
 </html>
