--- a/product-detail.html
+++ b/product-detail.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>about</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
-    <script type="module" crossorigin src="/hexschool-web-4/assets/main-Dd6xFy0u.js"></script>
-    <link rel="stylesheet" crossorigin href="/hexschool-web-4/assets/main-CL8EEvGh.css">
+    <script type="module" crossorigin src="/hexschool-web-4/assets/main-DqablsSc.js"></script>
+    <link rel="stylesheet" crossorigin href="/hexschool-web-4/assets/main-D0w_5AF5.css">
   </head>
   <body>
     <nav class="nav">
@@ -39,7 +45,7 @@
     <section class="mb-56 mb-md-0 pl-md-12 pr-md-12">
       <div class="container">
         <div class="d-flex flex-direction-md-column">
-          <div class="shoe-container pr-16 d-md-none">
+          <div class="shoe-container pr-16 d-md-none" style="max-width: 55%">
             <div class="d-flex flex-wrap">
               <div class="shoe-card pr-8 pb-8">
                 <img src="/hexschool-web-4/assets/image-gISZDASy.png" alt="鞋子" />
@@ -146,22 +152,23 @@
 
               <div
                 class="feat-button-group d-flex flex-wrap align-items-md-center mb-md-32"
-                style="min-width: 400px"
               >
-                <button
-                  class="btn btn-primary mb-32 mr-4 d-md-none"
-                  style="background-color: #ffffff"
-                >
-                  <i class="bi bi-heart mr-8"></i>加入蒐藏
-                </button>
-                <button
-                  class="btn btn-secondary mb-32 mb-md-0"
-                  style="background-color: black; color: white"
-                >
-                  <i class="bi bi-handbag mr-8"></i>門市預約試穿
-                </button>
+                <div class="d-flex justify-content-between">
+                  <button
+                    class="btn btn-primary mb-32 mr-4 d-md-none d-black"
+                    style="background-color: #ffffff"
+                  >
+                    <i class="bi bi-heart mr-8"></i>加入蒐藏
+                  </button>
+                  <button
+                    class="btn btn-secondary mb-32 mb-md-0 d-black"
+                    style="background-color: black; color: white"
+                  >
+                    <i class="bi bi-handbag mr-8"></i>門市預約試穿
+                  </button>
+                </div>
 
-                <div style="padding: 12px">
+                <div class="d-none d-md-block" style="padding: 12px">
                   <i class="bi bi-heart"></i>
                 </div>
               </div>
@@ -284,6 +291,6 @@
     </div>
   </div>
 </footer>
-
+
   </body>
 </html>
