--- a/product-list.html
+++ b/product-list.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
     />
-    <script type="module" crossorigin src="/hexschool-web-4/assets/main-Dd6xFy0u.js"></script>
-    <link rel="stylesheet" crossorigin href="/hexschool-web-4/assets/main-CL8EEvGh.css">
+    <script type="module" crossorigin src="/hexschool-web-4/assets/main-DqablsSc.js"></script>
+    <link rel="stylesheet" crossorigin href="/hexschool-web-4/assets/main-D0w_5AF5.css">
   </head>
   <body>
     <nav class="nav">
@@ -65,8 +71,8 @@
           </div>
 
           <div>
-            <div class="d-flex flex-wrap">
-              <div class="card-row">
+            <ul class="d-flex flex-wrap list-unstyled">
+              <li class="card-row">
                 <div class="card pr-md-6">
                   <img
                     class="mb-12"
@@ -76,8 +82,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pl-md-6">
                   <img
                     class="mb-12"
@@ -87,8 +93,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pr-md-6">
                   <img
                     class="mb-12"
@@ -98,8 +104,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pl-md-6">
                   <img
                     class="mb-12"
@@ -109,8 +115,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pr-md-6">
                   <img
                     class="mb-12"
@@ -120,8 +126,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pl-md-6">
                   <img
                     class="mb-12"
@@ -131,8 +137,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pr-md-6">
                   <img
                     class="mb-12"
@@ -142,8 +148,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pl-md-6">
                   <img
                     class="mb-12"
@@ -153,8 +159,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pr-md-6">
                   <img
                     class="mb-12"
@@ -164,8 +170,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row">
+              </li>
+              <li class="card-row">
                 <div class="card pl-md-6">
                   <img
                     class="mb-12"
@@ -175,8 +181,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row d-md-none">
+              </li>
+              <li class="card-row d-md-none">
                 <div class="card">
                   <img
                     class="mb-12"
@@ -186,8 +192,8 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-              <div class="card-row d-md-none">
+              </li>
+              <li class="card-row d-md-none">
                 <div class="card">
                   <img
                     class="mb-12"
@@ -197,19 +203,20 @@
                   <p>PLATFORM 404</p>
                   <p>NT$2,600</p>
                 </div>
-              </div>
-            </div>
+              </li>
+            </ul>
+
             <div class="d-flex justify-content-ct">
               <img
                 class="page"
                 src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='20'%20height='20'%20fill='%236C757D'%20class='bi%20bi-chevron-left'%20viewBox='0%200%2016%2016'%3e%3cpath%20fill-rule='evenodd'%20d='M11.354%201.646a.5.5%200%200%201%200%20.708L5.707%208l5.647%205.646a.5.5%200%200%201-.708.708l-6-6a.5.5%200%200%201%200-.708l6-6a.5.5%200%200%201%20.708%200'/%3e%3c/svg%3e"
                 alt="左"
               />
-              <p class="page bg-primary-300">1</p>
+              <p class="page">1</p>
               <p class="page">2</p>
               <p class="page">3</p>
               <p class="page">...</p>
-              <p class="page">10</p>
+              <p class="page page-select">10</p>
               <img
                 class="page"
                 src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='20'%20height='20'%20fill='currentColor'%20class='bi%20bi-chevron-right'%20viewBox='0%200%2016%2016'%3e%3cpath%20fill-rule='evenodd'%20d='M4.646%201.646a.5.5%200%200%201%20.708%200l6%206a.5.5%200%200%201%200%20.708l-6%206a.5.5%200%200%201-.708-.708L10.293%208%204.646%202.354a.5.5%200%200%201%200-.708'/%3e%3c/svg%3e"
@@ -255,6 +262,6 @@
     </div>
   </div>
 </footer>
-
+
   </body>
 </html>
